--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gumabll's - Portfolio</title>
+    <title>Jethro - Portfolio</title>
     <link rel="stylesheet" href="Jethro.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Gumball</h1>
-            <p>Semi Web Developer</p>
+            <h1>Jethro</h1>
+            <p>Basin Web Developer</p>
             <nav>
                 <ul>
                     <li><a href="#" onclick="navigateTo('home')">Home</a></li>
@@ -23,23 +23,25 @@
 
     <main id="home" class="container">
         <h2>Welcome to My Portfolio!</h2>
-        <p>"Malooy man gali si lord si sir cliff pa kaha" XD.</p>
+        
     </main>
 
     <main id="about" class="container" style="display: none;">
         <h2>About Me</h2>
-        <p>sigi rag tuluga og segi pud og manifest nga maka pasar</p>
+        <p>ako ang pinaka malas na tao sa tibouk kalibotan</p>
+        <p></p>
     </main>
 
     <main id="projects" class="container" style="display: none;">
         <h2>Projects</h2>
+        <p>wala pa nahuman</p>
         <div class="project">
             <h3>Project 1</h3>
-            <p>Padulongay pa.</p>
+            <p>wala pa nahuman</p>
         </div>
         <div class="project">
             <h3>Project 2</h3>
-            <p>Wala pa tawun.</p>
+            <p>hapit na mahuman</p>
         </div>
     </main>
 
