--- a/index.html
+++ b/index.html
@@ -34,15 +34,32 @@
 
     <main id="projects" class="container" style="display: none;">
         <h2>Projects</h2>
-        <p>wala pa nahuman</p>
-        <div class="project">
-            <h3>Project 1</h3>
-            <p>wala pa nahuman</p>
-        </div>
-        <div class="project">
-            <h3>Project 2</h3>
-            <p>hapit na mahuman</p>
-        </div>
+   <br>
+   
+        <a href="https://github.com/JethroBalaga/it24c-portfolio2/tree/main/src/Abstract">Abstraction</a>
+        <br>
+        <a href="https://github.com/JethroBalaga/it24c-portfolio2/tree/main/src/Abstract_color_lab_exercise">Abstract_color_lab_exercise</a>
+        <br>
+        <a href="https://github.com/JethroBalaga/it24c-portfolio2/tree/main/src/Arraysort">Arraysort</a>
+        <br>
+        <a href="https://github.com/JethroBalaga/it24c-portfolio2/tree/main/src/Bankacc">Bank account</a>
+        <br>
+        <a href="https://github.com/JethroBalaga/it24c-portfolio2/tree/main/src/Employee">Employee</a>
+        <br>
+        <a href="https://github.com/JethroBalaga/it24c-portfolio2/tree/main/src/Interface">Interface</a>
+        <br>
+        <a href="https://github.com/JethroBalaga/it24c-portfolio2/tree/main/src/Lampandstudent">Lamp and student</a>
+        <br>
+        <a href="https://github.com/JethroBalaga/it24c-portfolio2/tree/main/src/Polymorphism">Polymorphism</a>
+        <br>
+        <a href="https://github.com/JethroBalaga/it24c-portfolio2/tree/main/src/encapsulation">Enscapsulation</a>
+        <br>
+        <a href="https://github.com/JethroBalaga/it24c-portfolio2/tree/main/src/inheritance">Inheritance</a>
+        <br>
+        <a href="https://github.com/JethroBalaga/it24c-portfolio2/tree/main/src/oop_basics">OOP basics</a>
+        <br>
+        <a href="https://github.com/JethroBalaga/it24c-portfolio2/tree/main/src/student">Students</a> 
+    
     </main>
 
     <script src="jethro.js"></script>
